# aitc

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.claude/commands/: sync.md
.claude/worktrees/agent-af9efb7f/: package.json
.github/workflows/: ci.yml  release.yml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/debug/: approval-hook-not-blocking.md  cold-boot-stuck-building-grap.md  squarify-not-a-function.md
.planning/debug/resolved/: radar-zoom-blanks-canvas.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  README.md
research/codebase-visualization/: 00-synthesis.md  01-tool-survey.md  02-layout-algorithms.md  03-cross-language.md  04-agent-overlay.md  05-semantic-zoom.md  06-rendering-architecture.md  README.md
src/: App.tsx  bindings.ts  main.tsx  splashscreen.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/aitc-hook/: Cargo.toml
src-tauri/aitc-hook/src/: lib.rs  main.rs
src-tauri/aitc-hook/tests/: envelope_shapes.rs  sidecar_roundtrip.rs
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  repo_session.rs  system_load.rs  tray.rs
src-tauri/src/agents/: adapter.rs  bash_paths.rs  claude_code.rs  codex.rs  commands.rs  generic.rs  hook_install.rs  hook_waiters.rs  launcher.rs  mod.rs  notifications.rs  opencode.rs  registry.rs  self_register.rs
src-tauri/src/chat_runtime/: auto_resume.rs  commands.rs  launcher.rs  mod.rs  notifications.rs  outbound.rs  parser.rs  session_registry.rs  supervisor.rs  types.rs
src-tauri/src/claude_resources/: claude_md.rs  commands.rs  events.rs  fixtures.rs  mod.rs  parse.rs  pipeline_state.rs  routing.rs  scan.rs  write_fence.rs
src-tauri/src/comms/: app_settings.rs  commands.rs  mod.rs  protected_path_trigger.rs  types.rs
src-tauri/src/conflict/: backup.rs  canonicalize.rs  commands.rs  engine.rs  mod.rs  resolution.rs  types.rs
src-tauri/src/db/: events.rs  mod.rs  session.rs
src-tauri/src/db/migrations/: 001_initial_schema.sql  002_phase3_enrichment.sql  003_comms_chat.sql  004_phase5_resolution.sql  005_pretool_use_hooks.sql  006_agent_events.sql  007_conflict_gating.sql
src-tauri/src/mcp/: mod.rs  session_config.rs  streamable_http.rs  tools.rs  types.rs
src-tauri/src/pipeline/: commands.rs  events.rs  ignore_filter.rs  mod.rs  passive_bridge.rs  pipeline_state.rs  port_file.rs  process_snapshot.rs  smoke_tests.rs  test_util.rs  tree_index.rs  watcher.rs  worktree.rs
src-tauri/src/pipeline/ipc_bridges/: bindings_parser.rs  frontend_callsite_scanner.rs  mod.rs  rust_handler_scanner.rs
src-tauri/src/pipeline/ipc_bridges/queries/: mod.rs  typescript.rs
src-tauri/src/pipeline/ipc_bridges/test_fixtures/: sample_bindings.ts  sample_caller_literal.ts  sample_caller_typed.tsx  sample_handler.rs
src-tauri/tests/: chat_runtime_smoke.rs  dep_graph_bench.rs  end_to_end_smoke.rs  hook_e2e_with_real_sidecar.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: expected_permission_decision.json  pretool_use_stdin.json
src-tauri/tests/fixtures/claude_resources/: CLAUDE.md  settings.json
src-tauri/tests/fixtures/claude_resources/agents/: example-agent.md
src-tauri/tests/fixtures/claude_resources/commands/: example-command.md
src-tauri/tests/fixtures/claude_resources/hooks/: sample-hook.sh
src-tauri/tests/fixtures/claude_resources/plugins/: installed_plugins.json
src-tauri/tests/fixtures/claude_resources/skills/example-skill/: SKILL.md
src-tauri/tests/fixtures/stream_json/: coalesced_turn.jsonl  hook_pretool_use.jsonl  hook_started_response.jsonl  interrupted_turn.jsonl  malformed.jsonl  multi_turn_persistent.jsonl  result_completed.jsonl  single_turn_text.jsonl  tool_result.jsonl  tool_use_edit.jsonl
src/__tests__/: command-palette.test.tsx  navigation.test.tsx  pipelineStore.test.ts  radar-pulse.test.tsx  theme.test.ts
src/hooks/: useCanvasZoomPan.ts  useChatChannel.ts  useClaudeResourcesChannel.ts  useGraphLayout.ts  usePipelineChannel.ts  useRafCoalesced.ts  useScopedAgents.ts  useSyntaxHighlight.ts  useTreemapLayout.ts  useWindowControls.ts
src/lib/: contention.ts  deepLinkNotification.ts  merge.ts
src/providers/: RepoSessionProvider.tsx
src/stores/: agentStore.ts  chatStore.ts  claudeResourcesStore.ts  commsStore.ts  conflictStore.ts  historyStore.ts  paletteStore.ts  pipelineStore.ts  radarStore.ts  repoStore.ts  sidebarStore.ts
src/styles/: animations.css  fonts.css  theme.css
src/views/: CommsView.tsx  ConflictsView.tsx  HistoryView.tsx  RadarView.tsx  TowerView.tsx
src/workers/: graphSim.worker.ts  graphSimConfig.ts  graphSimCore.ts  graphSimProtocol.ts
tests/manual/: phase-08-uat.md
wireframes/agent_control_tower/: code.html
wireframes/airspace_radar/: code.html
wireframes/communications_hub/: code.html
wireframes/conflict_resolution_center/: code.html
wireframes/vector_terminal/: DESIGN.md
(+514 files in other folders)
