[workspace]
members = [".", "aitc-hook"]

[package]
name = "aitc"
version = "0.1.0"
description = "AI Traffic Controller - Desktop agent management"
authors = ["you"]
edition = "2021"

[lib]
name = "aitc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread", "macros", "process"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
specta-typescript = "=0.0.9"

# Phase 2: Real-Time Data Pipeline dependencies
notify = "8"
# Version correction: CLAUDE.md stack listed notify-debouncer-full ^0.4 but research
# verified 0.7 is the version that pairs with notify 8.2+ (see 02-RESEARCH.md).
notify-debouncer-full = "0.7"
sysinfo = "0.38"
ignore = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# Phase 3: Agent Management & Conflict Detection dependencies
axum = "0.8"
async-trait = "0.1"
tauri-plugin-notification = "2"
toml_crate = { package = "toml", version = "0.8" }
regex = "1"

# Phase 4: Core UI Views dependencies
glob = "0.3"

# Phase 7: Graph-Based Codebase Map dependencies
tree-sitter = "=0.26.8"
tree-sitter-typescript = "=0.23.2"
tree-sitter-javascript = "=0.25.0"
tree-sitter-rust = "=0.24.2"
tree-sitter-python = "=0.25.0"
rayon = "=1.12.0"

# Phase 9: ARSENAL (Claude resources manager) dependencies
gray_matter = "0.2"
# Phase 8 bumped `dirs` from 5 to 6 (unified with sidecar crate aitc-hook).
dirs = "6"
tempfile = "3"
walkdir = "2"

# Phase 8: PreToolUse hook integration dependencies
tauri-plugin-shell = "2"

# Linux-only: intercept Ctrl+scroll at the GTK widget level before
# WebKitGTK processes it into a zoom change. All three crates are
# already transitive deps of tauri (via wry / tray-icon) — pinning
# here just gives us direct import access without pulling new C libs.
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"
gtk = "0.18"
gdk = "0.18"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
# Phase 8: integration smokes POST to a locally-bound /hook server.
# default-features = false strips OpenSSL + native-tls (not needed for
# 127.0.0.1 HTTP); json feature lets us call .json()/.json(&body).
reqwest = { version = "0.12", features = ["json"], default-features = false }
# Phase 8: tauri::test::mock_app() for an AppHandle usable from
# create_approval_request_internal without spinning up the Tauri runtime.
tauri = { version = "2", features = ["tray-icon", "test"] }
