[package]
name = "aitc-hook"
version = "0.1.0"
edition = "2021"
description = "AITC sidecar that bridges Claude Code PreToolUse hooks into the AITC /hook endpoint."
publish = false

[[bin]]
name = "aitc-hook"
path = "src/main.rs"

[lib]
name = "aitc_hook"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "3"
anyhow = "1"
dirs = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
